Added Project activities to generate details of the project information. - Fixed names of some attributes of DemoTree